Implementation - API 2:  get the distance in KM between a source and destination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8080
 
-
 ## Support colors in console
 spring.output.ansi.enabled=ALWAYS
+
+# Mongo DB Config
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=geolocation
+spring.data.mongodb.repositories.enabled=true
