--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=geolocation
 spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.auto-index-creation=true
